--- a/AgriBook/AgriBook/Web.config
+++ b/AgriBook/AgriBook/Web.config
@@ -4,6 +4,14 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AgriBook;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=188.121.44.212;Integrated Security=False;User ID=mehmedju;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
