Fixed issue with yields

--- a/AgriBook/AgriBook.API/Web.config
+++ b/AgriBook/AgriBook.API/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AgriBook;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AgriBook.API-20160216094050.mdf;Initial Catalog=aspnet-AgriBook.API-20160216094050;Integrated Security=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
     <!--<add name="DefaultConnection" connectionString="Data Source=188.121.44.212;Integrated Security=False;User ID=mehmedju;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
