--- a/AgriBook/AgriBook/AgriBook.UI.csproj
+++ b/AgriBook/AgriBook/AgriBook.UI.csproj
@@ -172,6 +172,8 @@
     <Content Include="content\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="content\fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="Properties\PublishProfiles\laktal-stipanjici.com - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\laktal-stipanjici.com - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -220,7 +222,9 @@
     <Content Include="views\partials\cropsModal.html" />
     <Content Include="views\partials\fertilizersModal.html" />
     <Content Include="views\partials\parcelModal.html" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
