--- a/AgriBook/AgriBook.DB/App.config
+++ b/AgriBook/AgriBook.DB/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=.;Initial Catalog=AgriBook;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Server=188.121.44.212;Initial Catalog=agriBook;Integrated Security=False;User ID=mehmedju;PWD=Laktal123;Encrypt=False;Packet Size=4096;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
