--- a/AgriBook/AgriBook/Web.config
+++ b/AgriBook/AgriBook/Web.config
@@ -9,12 +9,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AgriBook;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=188.121.44.212;Initial Catalog=agriBook;Integrated Security=False;User ID=mehmedju;PWD=Laktal123;Encrypt=False;Packet Size=4096;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
+
+    <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AgriBook;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="DefaultConnection" connectionString="Data Source=188.121.44.212;Integrated Security=False;User ID=mehmedju;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="Off"/>
+    <trust level="Full"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
