Added ftp publish profiles for UI and WEBAPI project, removed old publish profiles

--- a/AgriBook/AgriBook.API/AgriBook.API.csproj
+++ b/AgriBook/AgriBook.API/AgriBook.API.csproj
@@ -305,6 +305,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\FTP_API.pubxml" />
     <None Include="Properties\PublishProfiles\laktal-stipanjici.com - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
